--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ authors = [
 ]
 description = "Email OSINT"
 requires-python = ">=3.8"
-dependencies = ['colorama','requests','urllib3'],
+dependencies = ['colorama','requests','urllib3']
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: GPLv3",
